<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ImageView
        android:id="@+id/ivHome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:contentDescription="@string/menu_home"

        app:srcCompat="@drawable/home" />

    <ImageView
        android:id="@+id/ivSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:contentDescription="@string/menu_search"
        app:srcCompat="@drawable/search" />


    <ImageView
        android:id="@+id/ivAddEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:contentDescription="@string/menu_addEvent"
        app:srcCompat="@drawable/calendar" />


    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        android:contentDescription="@string/menu_profile"
        app:srcCompat="@drawable/user" />


</LinearLayout>