<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
     android:layout_height="match_parent"

    android:orientation="vertical">

    <fragment
        android:id="@+id/menuUpFromHome"
        android:name="co.movil.computacion.controller.MenuUpFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp">
    </fragment>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.9"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".controller.Event">

            <!-- Evento-->
            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Evento"
                android:textSize="36sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tvEvento"
                android:layout_width="0dp"
                android:layout_height="29dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/event_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/event_description"
                app:layout_constraintEnd_toEndOf="@+id/etTitulo"
                app:layout_constraintStart_toStartOf="@+id/etTitulo"
                app:layout_constraintTop_toBottomOf="@+id/etTitulo" />

            <EditText
                android:id="@+id/etTitulo"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/tvEvento"
                app:layout_constraintStart_toStartOf="@+id/tvEvento"
                app:layout_constraintTop_toBottomOf="@+id/tvEvento" />

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="0dp"
                android:layout_height="41dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/tvDescription"
                app:layout_constraintStart_toStartOf="@+id/tvDescription"
                app:layout_constraintTop_toBottomOf="@+id/tvDescription" />

            <EditText
                android:id="@+id/etCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="@+id/tvCategory"
                app:layout_constraintStart_toStartOf="@+id/tvCategory"
                app:layout_constraintTop_toBottomOf="@+id/tvCategory" />

            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/event_category"
                app:layout_constraintEnd_toEndOf="@+id/etDescription"
                app:layout_constraintStart_toStartOf="@+id/etDescription"
                app:layout_constraintTop_toBottomOf="@+id/etDescription" />

            <TextView
                android:id="@+id/tvMiniatura"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/event_thumbnail"
                app:layout_constraintEnd_toEndOf="@+id/etCategory"
                app:layout_constraintStart_toStartOf="@+id/etCategory"
                app:layout_constraintTop_toBottomOf="@+id/etCategory" />

            <ImageView
                android:id="@+id/miniatura"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:maxWidth="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:paddingRight="10dp"
                android:src="@drawable/img_base"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvMiniatura" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="141dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="145dp"
                android:text="@string/event_save"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnLoadImage" />

            <Button
                android:id="@+id/btnLoadImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Cargar imagen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/miniatura" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <fragment

        android:id="@+id/menuFromEvent"
        android:name="co.movil.computacion.controller.MenuFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp">

    </fragment>

</LinearLayout>